secondPlayerの行動値が40ぴったりの際に無限ループに陥るパターンを修正

--- a/tougi.html
+++ b/tougi.html
@@ -424,7 +424,7 @@
                         firstPlayer.attack(secondPlayer);
                     }
 
-                    if (secondPlayer.isAlive() && secondPlayer.actionPoints >= firstPlayer.actionPoints && secondPlayer.actionPoints > 40) {
+                    if (secondPlayer.isAlive() && secondPlayer.actionPoints >= firstPlayer.actionPoints && secondPlayer.actionPoints >= 40) {
                         secondPlayer.attack(firstPlayer);
                     }
 
