回避CF判定に命中判定のダイスロール結果を用いていた不具合を修正

--- a/tougi.html
+++ b/tougi.html
@@ -298,10 +298,10 @@
                 if (roll <= this.fumble) {
                     attackFumble = true
                 }
-                if (roll >= 100 - target.critical) {
+                if (evasionRoll >= 100 - target.critical) {
                     defenceCritical = true
                 }
-                if (roll <= target.fumble) {
+                if (evasionRoll <= target.fumble) {
                     defenceFumble = true
                 }
 
