--- a/tougi.html
+++ b/tougi.html
@@ -680,12 +680,11 @@
 
                         if (targetRangeIndex === currentRangeIndex) {
                             this.rangeHitFix = fixValue;
-                            this.hit += fixValue;
                         }
                     }
                 }
 
-                return this.hit;
+                this.hit += this.rangeHitFix;
             }
 
             halveProcess() {
