--- a/tougi.html
+++ b/tougi.html
@@ -101,24 +101,24 @@
             margin-right: 8px;
         }
 
-        .range-label {
+        .range_label {
             font-size: 14px;
             display: inline-block;
             width: 8em;
         }
 
-        .range-container label {
+        .range_container label {
             display: flex;
             align-items: center;
             padding: 5px 5px 0px 5px;
             width: 1em;
         }
 
-        .range-container input {
+        .range_container input {
             width: 1em;
         }
 
-        .range-container {
+        .range_container {
             display: flex;
             justify-content: left;
             align-items: center;
@@ -126,7 +126,7 @@
             height: 3em;
         }
 
-        .range-item {
+        .range_item {
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -169,25 +169,25 @@
                         required></div>
                 <div><label for="player1_mobility">機動力: </label><input type="number" id="player1_mobility" value="4"
                         required></div>
-                <div><span class="range-label">通常攻撃射程：</span></div>
-                <div class="range-container">
-                    <div class="range-item">
+                <div><span class="range_label">通常攻撃射程：</span></div>
+                <div class="range_container">
+                    <div class="range_item">
                         <label for="close">至</label>
                         <input type="checkbox" id="player1_attack_range_check_0" name="player1_attackRange" checked>
                     </div>
-                    <div class="range-item">
+                    <div class="range_item">
                         <label for="near">近</label>
                         <input type="checkbox" id="player1_attack_range_check_1" name="player1_attackRange">
                     </div>
-                    <div class="range-item">
+                    <div class="range_item">
                         <label for="middle">中</label>
                         <input type="checkbox" id="player1_attack_range_check_2" name="player1_attackRange">
                     </div>
-                    <div class="range-item">
+                    <div class="range_item">
                         <label for="far">遠</label>
                         <input type="checkbox" id="player1_attack_range_check_3" name="player1_attackRange" checked>
                     </div>
-                    <div class="range-item">
+                    <div class="range_item">
                         <label for="ultra">超</label>
                         <input type="checkbox" id="player1_attack_range_check_4" name="player1_attackRange" value="middle">
                     </div>
@@ -226,25 +226,25 @@
                         required></div>
                 <div><label for="player2_mobility">機動力: </label><input type="number" id="player2_mobility" value="4"
                         required></div>
-                <div><span class="range-label">通常攻撃射程：</span></div>
-                <div class="range-container">
-                    <div class="range-item">
+                <div><span class="range_label">通常攻撃射程：</span></div>
+                <div class="range_container">
+                    <div class="range_item">
                         <label for="close">至</label>
                         <input type="checkbox" id="player2_attack_range_check_0" name="player2_attackRange" checked>
                     </div>
-                    <div class="range-item">
+                    <div class="range_item">
                         <label for="near">近</label>
                         <input type="checkbox" id="player2_attack_range_check_1" name="player2_attackRange">
                     </div>
-                    <div class="range-item">
+                    <div class="range_item">
                         <label for="middle">中</label>
                         <input type="checkbox" id="player2_attack_range_check_2" name="player2_attackRange">
                     </div>
-                    <div class="range-item">
+                    <div class="range_item">
                         <label for="far">遠</label>
                         <input type="checkbox" id="player2_attack_range_check_3" name="player2_attackRange" checked>
                     </div>
-                    <div class="range-item">
+                    <div class="range_item">
                         <label for="ultra">超</label>
                         <input type="checkbox" id="player2_attack_range_check_4" name="player2_attackRange">
                     </div>
